Java11 Compatible changes
Signed-off-by: expani <anijainc@amazon.com>